Fixed DTO, Controller working, Removed Mapper